--- a/doc/壹 - gradle/1. Gradle多模块.md
+++ b/doc/壹 - gradle/1. Gradle多模块.md
@@ -98,7 +98,7 @@ root
 我还希望能有一个存放所有实际业务服务模块的 `services` 父模块，来统一配置所有的服务模块。
 而对于服务模块来讲，每个不同的服务都会有那么固定的7个小的子模块来细分模块之间的职责，比如 `-api` 模块为 `-controller` 提供约束、`-service` 为 `-service-impl` 提供约束等等。
 
-当时我的脑海中想到这个问题的时候，第一反应是去查了查"如何配置Gradle多模块" 或者 "Gradle 嵌套模块"，因为基于我对于Maven的认知，在Maven中，每个模块的每个子模块都需要配置它对应的父模块，且父模块也要配置其下的所有子模块。当时的我认为，Gradle也许也许要类似的配置。
+当时我的脑海中想到这个问题的时候，第一反应是去查了查"如何配置Gradle多模块" 或者 "Gradle 嵌套模块"，因为基于我对于Maven的认知，在Maven中，每个模块的每个子模块都需要配置它对应的父模块，且父模块也要配置其下的所有子模块。当时的我认为，Gradle也许也需要类似的配置。
 然而查询的结果显而易见，我并没有找到我想要的答案。直到我查询了 `Gradle` 的官方文档才恍然大悟：
 ```kotlin
 include("overtime-commons:common-core")
